# Workshop

./: README.md
.cursor/rules/: test.mdc
week1/: README.md
week1/ruff/01-introduction/: README.md
week1/ruff/02-installation-setup/: README.md
week1/ruff/03-configuration/: README.md
week1/ruff/03-linter/: README.md
week1/ruff/04-formatter/: README.md
week1/ruff/05-configuration/: README.md
week1/ruff/05-configuration/examples/: pyproject.toml
week1/uv/01-introduction/: README.md  benchmarks.md  why-uv.md
week1/uv/02-installation-setup/: README.md
week1/uv/03-working-on-projects/: README.md
week1/uv/04-tools/: README.md
week1/uv/05-pyproject/: README.md
week1/uv/06-migration-from-pip/: README.md  exporting-to-pip.md
week1/uv/07-python-version-management/: README.md
week2/01-why-we-test/01-business-case-for-quality/: README.md
week2/01-why-we-test/02-test-pyramid/: README.md
week2/01-why-we-test/03-intro-to-tdd/: README.md
week2/02-intro-to-pytest/01-why-pytest/: README.md
week2/02-intro-to-pytest/02-first-test/: README.md
week2/02-intro-to-pytest/03-interpreting-results/: README.md
week2/02-intro-to-pytest/examples/: test_math.py
week2/03-pytest-core-features/01-fixtures/: README.md
week2/03-pytest-core-features/02-parametrization/: README.md
week2/03-pytest-core-features/03-markers/: README.md
week2/04-advanced-pytest/01-mocking-with-pytest-mock/: README.md
week2/04-advanced-pytest/02-code-coverage-with-pytest-cov/: README.md
week2/06-ai-driven-development/: README.md
week3/: pyproject.toml
week4/: pyproject.toml
(+77 files in other folders)
